hphp/test/zend/good/ext/spl/tests/DirectoryIterator_getOwner_basic.php.skipif
<?php
<<__EntryPoint>> function main() {
if (posix_geteuid() == 0) die('SKIP Cannot run test as root.');
}
