hphp/test/zend/bad/ext/sqlite3/tests/sqlite3_15_open_error.php.skipif
<?php
if(substr(PHP_OS, 0, 3) == 'WIN' ) {
	die('skip non windows test');
}
require_once(__DIR__ . '/skipif.inc');
if (posix_geteuid() == 0) {
    die('SKIP Cannot run test as root.');
}
?>